# notebooklm-agent

./: README.md  pyproject.toml
src/notebooklm_agent/: __init__.py  agent.py  cli.py
src/notebooklm_agent/auth/: __init__.py  pool.py
src/notebooklm_agent/brain/: __init__.py  artifacts.py  bootstrap.py  chat.py  constants.py  core.py  research.py  smolagents_model.py  smolagents_tools.py  user_brain.py
src/notebooklm_agent/gateways/: telegram.py
src/notebooklm_agent/memory/: __init__.py  notebook_memory.py
src/notebooklm_agent/router/: __init__.py  intent_router.py
src/notebooklm_agent/utils/: __init__.py  text.py
